Se actualiza el index

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@
         <nav class="navbar">
             <div class="logo" >
                 <a href="index.html">
-                    <img src="../img/logo.png" alt="Logo">
+                    <img src="../img/logo-actualizado.png" alt="Logo">
                 </a>
             </div>
             <button class="iniciar-sesion" onclick="window.location.href = 'login.html';">
@@ -14,15 +14,18 @@
     </header>
 
 <style>
+header{
+    background-color: #FFFFFF;
+    padding: 10px;
+}
 .navbar{
     display: flex;
     justify-content: space-around ;
     align-items: center;
-    margin: 5px;
     height: 8vh;
 }
 .logo img{
-    width: 90px;
+    width: 259px;
 }
 .navbar button {
     width: 150px;
