--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,5 @@
 ---
 import Layout from '../layouts/Layout.astro';
-import Card from '../components/Card.astro';
 ---
 
 <Layout title="Welcome to Astro.">
@@ -9,22 +8,29 @@ import Card from '../components/Card.astro';
         <h1 class="text-3xl font-bold">Explora la Magia de Nuestro Paraíso Colombiano</h1>
     </div>
     <div class="flex justify-center space-x-4 mb-6">
-        <button class="border border-blue-500 rounded-lg p-4 hover:bg-blue-500 transition-all">
+        <button class="border border-blue-500 rounded-lg p-4 hover:bg-blue-500 transition-all bg-white">
             <span class="flex flex-col items-center">
                 <img src="../img/hotel.png" alt="hoteles" class="w-12 h-12 mb-2">
                 Hoteles
             </span>
         </button>
-        <button class="border border-blue-500 rounded-lg p-4 hover:bg-blue-500 transition-all">
+        <button class="border border-blue-500 rounded-lg p-4 hover:bg-blue-500 transition-all bg-white">
             <span class="flex flex-col items-center">
                 <img src="../img/actividades.png" alt="actividades" class="w-12 h-12 mb-2">
                 Actividades
             </span>
         </button>
-        <button class="border border-blue-500 rounded-lg p-4 hover:bg-blue-500 transition-all">
+        <button class="border border-blue-500 rounded-lg p-4 hover:bg-blue-500 transition-all bg-white">
             <span class="flex flex-col items-center">
                 <img src="../img/restaurante.png" alt="restaurantes" class="w-12 h-12 mb-2">
                 Restaurantes
+            </span>
+        </button>
+        <button class="border border-blue-500 rounded-lg p-4 hover:bg-blue-500 transition-all bg-white">
+            <span class="flex flex-col items-center">
+                <img src="../img/hotel.png" alt="hoteles" class="w-12 h-12 mb-2">
+                Paquetes todo
+en uno!!
             </span>
         </button>
     </div>
