se agregas nuevas paginas

--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -29,8 +29,7 @@ import Layout from '../layouts/Layout.astro';
         <button class="border border-blue-500 rounded-lg p-4 hover:bg-blue-500 transition-all bg-white">
             <span class="flex flex-col items-center">
                 <img src="../img/hotel.png" alt="hoteles" class="w-12 h-12 mb-2">
-                Paquetes todo
-en uno!!
+                Paquetes todo en uno!!
             </span>
         </button>
     </div>
