Prueba de login

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,23 +1,18 @@
 ---
 ---
-<header>
+<header class="bg-[#FFFFFF] p-[10px]">
         <nav class="navbar">
             <div class="logo" >
                 <a href="index.html">
                     <img src="../img/logo-actualizado.png" alt="Logo">
                 </a>
             </div>
-            <button class="iniciar-sesion" onclick="window.location.href = 'login.html';">
-                Iniciar sesión
-            </button>        
+            <a class="" href="login.html">Iniciar sesion</a>    
         </nav>
     </header>
 
 <style>
-header{
-    background-color: #FFFFFF;
-    padding: 10px;
-}
+
 .navbar{
     display: flex;
     justify-content: space-around ;
