--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,7 +7,7 @@
                     <img src="../img/logo-actualizado.png" alt="Logo">
                 </a>
             </div>
-            <a class="" href="/login.html">Iniciar sesion</a>    
+            <a class="" href="/login">Iniciar sesion</a>    
         </nav>
     </header>
 
