--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,32 +1,20 @@
 ---
 ---
 <header class="bg-[#FFFFFF] p-[10px]">
-        <nav class="navbar">
-            <div class="logo" >
+        <nav class="flex justify-around items-center h-[8vh]">
+            <div>
                 <a href="index.html">
-                    <img src="../img/logo-actualizado.png" alt="Logo">
+                    <img class="w-[259px]"src="../img/logo-actualizado.png" alt="Logo">
                 </a>
             </div>
-            <a class="" href="/login">Iniciar sesion</a>    
+            <a class="w-[168px] h-[45px] text-xl font-bold border-2 border-[#3B82F6] rounded-full flex items-center justify-center" href="/login">
+    Iniciar sesión
+</a>
         </nav>
     </header>
 
 <style>
-
-.navbar{
-    display: flex;
-    justify-content: space-around ;
-    align-items: center;
-    height: 8vh;
-}
-.logo img{
-    width: 259px;
-}
 .navbar button {
-    width: 150px;
-    height: 60px;
-    border: 3px solid #000000;
-    border-radius: 45px;
     transition: all 0.3s;
     cursor: pointer;
     background: white;
