--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,5 +1,6 @@
 ---
 import Header from '../components/Header.astro';
+import Footer from '../components/Footer.astro';
 interface Props {
 	title: string;
 }
@@ -15,9 +16,12 @@ const { title } = Astro.props;
 		<meta name="generator" content={Astro.generator} />
 		<title>{title}</title>
 	</head>
-	<body>
+	<body class="grid min-h-dvh grid-rows-[auto_1fr_auto]">
 		<Header />
-		<slot />
+        <main>
+            <slot />
+        </main>
+        <Footer />
 	</body>
 </html>
 <style is:global>
