--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,7 +5,7 @@
         <div class="container mx-auto px-6 grid grid-cols-1 md:grid-cols-2 gap-8">
             <!-- Columna izquierda con la imagen ocupando todo el espacio -->
             <div class="flex">
-                <img src="../img/imagen-footer.png" alt="Viajeros saltando en la carretera" class="w-full h-full object-cover rounded-lg shadow-lg">
+                <img src="../img/footer-imagen.png" alt="Viajeros saltando en la carretera" class="w-full h-full object-cover rounded-lg shadow-lg">
             </div>
 
             <!-- Columna derecha con 3 columnas centradas vertical y horizontalmente para enlaces -->
