--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -9,28 +9,28 @@ import Layout from '../layouts/Layout.astro';
     </div>
     <div class="flex justify-center space-x-4 mb-6">
         <button class="border border-blue-500 rounded-lg p-4 hover:bg-blue-500 transition-all bg-white">
-            <span class="flex flex-col items-center">
+            <a href="/hoteles"><span class="flex flex-col items-center">
                 <img src="../img/hotel.png" alt="hoteles" class="w-12 h-12 mb-2">
                 Hoteles
-            </span>
+            </span></a>
         </button>
         <button class="border border-blue-500 rounded-lg p-4 hover:bg-blue-500 transition-all bg-white">
-            <span class="flex flex-col items-center">
+            <a href="/actividades"><span class="flex flex-col items-center">
                 <img src="../img/actividades.png" alt="actividades" class="w-12 h-12 mb-2">
                 Actividades
-            </span>
+            </span></a>
         </button>
         <button class="border border-blue-500 rounded-lg p-4 hover:bg-blue-500 transition-all bg-white">
-            <span class="flex flex-col items-center">
+            <a href="/restaurantes"><span class="flex flex-col items-center">
                 <img src="../img/restaurante.png" alt="restaurantes" class="w-12 h-12 mb-2">
                 Restaurantes
-            </span>
+            </span></a>
         </button>
         <button class="border border-blue-500 rounded-lg p-4 hover:bg-blue-500 transition-all bg-white">
-            <span class="flex flex-col items-center">
+            <a href="/paquetes"><span class="flex flex-col items-center">
                 <img src="../img/paquetes.png" alt="hoteles" class="w-12 h-12 mb-2">
                 Paquetes todo en uno!!
-            </span>
+            </span></a>
         </button>
     </div>
 
