--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -7,22 +7,13 @@
                     <img class="w-[259px]"src="../img/logo-actualizado.png" alt="Logo">
                 </a>
             </div>
-            <a class="w-[168px] h-[45px] text-xl font-bold border-2 border-[#3B82F6] rounded-full flex items-center justify-center" href="/login">
+            <a class="w-[168px] h-[45px] text-xl font-bold border-2 border-[#3B82F6] rounded-full flex items-center justify-center hover:bg-blue-500 hover:border-2 hover:border-gray-500 hover:text-white hover:text-xl" href="/login">
     Iniciar sesión
 </a>
         </nav>
     </header>
 
 <style>
-.navbar button {
-    transition: all 0.3s;
-    cursor: pointer;
-    background: white;
-    font-size: 1.2em;
-    font-weight: 550;
-    font-family: 'Montserrat', sans-serif;
-}
-
 .navbar button:hover {
     background: #017bff;
     border: 3px solid grey;
