--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,11 +1,12 @@
 ---
+import FooterOther from '../components/FooterOther.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout isHomePage={true} title="Página Principal">
 	<main class="container mx-auto">
     <div class="titulo text-center mb-6">
-        <h1 class="text-3xl font-bold">Explora la Magia de Nuestro Paraíso Colombiano</h1>
+        <h1 class="text-3xl font-bold mt-4">Explora la Magia de Nuestro Paraíso Colombiano</h1>
     </div>
     <div class="flex justify-center space-x-4 mb-6">
         <button class="border border-blue-500 rounded-lg p-4 hover:bg-blue-500 transition-all bg-white">
@@ -72,3 +73,4 @@ import Layout from '../layouts/Layout.astro';
     </div>
 </main>
 </Layout>
+<FooterOther/>
