--- a/src/pages/login.astro
+++ b/src/pages/login.astro
@@ -3,7 +3,7 @@
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Login -RutaFinder">
+<Layout isHomePage={false} title="RutaFinder-Login">
 <main class="relative h-screen">
     
     <div class="block md:hidden absolute inset-0 bg-cover bg-center bg-no-repeat" style="background-image: url('../img/cartagena.png');"></div>
