--- a/src/pages/paquetes.astro
+++ b/src/pages/paquetes.astro
@@ -1,6 +1,8 @@
 ---
+import Footer from '../components/Footer.astro';
 import Layout from '../layouts/Layout.astro';
 ---
-<Layout title="Welcome to Astro.">
+<Layout isHomePage={false} title="RutaFinder-Paquetes">
     <h1>paquetes</h1>
+    <Footer/>
 </Layout>
