--- a/src/pages/restaurantes.astro
+++ b/src/pages/restaurantes.astro
@@ -1,7 +1,13 @@
 ---
+import Footer from '../components/Footer.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout isHomePage={false} title="RutaFinder-Restaurantes">
     <h1>restaurantes</h1>
+
+ 
+ 
+    <Footer/>
+
 </Layout>
