--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,54 +1,62 @@
 ---
+
+import HeaderHome from '../components/HeaderHome.astro';
 import Header from '../components/Header.astro';
 import Footer from '../components/Footer.astro';
+import FooterOther from '../components/FooterOther.astro';
+
 interface Props {
-	title: string;
+  title: string;
+  isHomePage: boolean;  // Propiedad Boolean
 }
-const { title } = Astro.props;
+
+const { title, isHomePage = false } = Astro.props;  // Definir isHomePage inicializado en false
 ---
+
 <!doctype html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="description" content="Astro description" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" type="image" href="../img/logo.png" />
-		<meta name="generator" content={Astro.generator} />
-		<title>{title}</title>
-	</head>
-	<body class="grid min-h-dvh grid-rows-[auto_1fr_auto]">
-		<Header />
-        <main>
-            <slot />
-        </main>
-        <Footer />
-	</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="description" content="Astro description" />
+    <meta name="viewport" content="width=device-width" />
+    <link rel="icon" type="image" href="../img/logo.png" />
+    <meta name="generator" content={Astro.generator} />
+    <title>{title}</title>
+  </head>
+  <body class="grid min-h-dvh grid-rows-[auto_1fr_auto]">
+    {isHomePage ? <HeaderHome /> : <Header />}  <!-- Cambia el header según la página -->
+    <main>
+      <slot />
+    </main>
+    {isHomePage ? <Footer /> : <FooterOther />}  <!-- Cambia el footer según la página -->
+  </body>
 </html>
+
 <style is:global>
-	:root {
-		--accent: 136, 58, 234;
-		--accent-light: 224, 204, 250;
-		--accent-dark: 49, 10, 101;
-		--accent-gradient: linear-gradient(
-			45deg,
-			rgb(var(--accent)),
-			rgb(var(--accent-light)) 30%,
-			white 60%
-		);
-	}
-	html {
-		font-family: system-ui, sans-serif;
-		background: #F7F7F7;
-	}
-	code {
-		font-family:
-			Menlo,
-			Monaco,
-			Lucida Console,
-			Liberation Mono,
-			DejaVu Sans Mono,
-			Bitstream Vera Sans Mono,
-			Courier New,
-			monospace;
-	}
+  :root {
+    --accent: 136, 58, 234;
+    --accent-light: 224, 204, 250;
+    --accent-dark: 49, 10, 101;
+    --accent-gradient: linear-gradient(
+      45deg,
+      rgb(var(--accent)),
+      rgb(var(--accent-light)) 30%,
+      white 60%
+    );
+  }
+  html {
+    font-family: system-ui, sans-serif;
+    background: #F7F7F7;
+  }
+  code {
+    font-family:
+      Menlo,
+      Monaco,
+      Lucida Console,
+      Liberation Mono,
+      DejaVu Sans Mono,
+      Bitstream Vera Sans Mono,
+      Courier New,
+      monospace;
+  }
 </style>
