--- a/src/pages/actividades.astro
+++ b/src/pages/actividades.astro
@@ -1,7 +1,11 @@
 ---
 import Layout from '../layouts/Layout.astro';
+import Footer from '../components/Footer.astro';
 ---
 
-<Layout title="Welcome to Astro.">
+<Layout isHomePage={false} title="RutaFinder-Actividades">
     <h1>actividades</h1>
+    
+
+    <Footer/>
 </Layout>
