Añadiendo el Nav para cada pagina

--- a/src/pages/actividades.astro
+++ b/src/pages/actividades.astro
@@ -1,9 +1,11 @@
 ---
+import Nav from '../components/Nav.astro';
 import Layout from '../layouts/Layout.astro';
 import Footer from '../components/Footer.astro';
 ---
 
 <Layout isHomePage={false} title="RutaFinder-Actividades">
+    <Nav/>
     <h1>actividades</h1>
     
 
