--- a/src/pages/restaurantes.astro
+++ b/src/pages/restaurantes.astro
@@ -1,9 +1,11 @@
 ---
+import Nav from '../components/Nav.astro';
 import Footer from '../components/Footer.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout isHomePage={false} title="RutaFinder-Restaurantes">
+    <Nav/>
     <h1>restaurantes</h1>
 
  
