--- a/src/pages/hoteles.astro
+++ b/src/pages/hoteles.astro
@@ -1,10 +1,12 @@
 ---
+import Nav from '../components/Nav.astro';
 import Footer from '../components/Footer.astro';
 import Carts from '../components/Carts.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout isHomePage={false} title="RutaFinder-Hoteles">
+   <Nav/>
    <Carts/>
   
    <Footer/>
