--- a/src/pages/paquetes.astro
+++ b/src/pages/paquetes.astro
@@ -1,8 +1,10 @@
 ---
+import Nav from '../components/Nav.astro';
 import Footer from '../components/Footer.astro';
 import Layout from '../layouts/Layout.astro';
 ---
 <Layout isHomePage={false} title="RutaFinder-Paquetes">
+    <Nav/>
     <h1>paquetes</h1>
     <Footer/>
 </Layout>
