--- a/src/components/Carts.astro
+++ b/src/components/Carts.astro
@@ -1,10 +1,10 @@
-<article class="flex bg-white rounded-2xl shadow-lg overflow-hidden max-w-md m-4">
+<article class="flex bg-white rounded-2xl shadow-xl overflow-hidden max-w-md m-4">
+    <header class="flex w-full">
+       
+        <img src="../img/hotel enterprice.png" alt="Hotel Enterprice" class="w-1/2 object-cover rounded-2xl">
 
-    <header class="flex">
-
-        <img src="../img/hotel enterprice.png" alt="Hotel Enterprice" class="w-48 object-cover rounded-2xl">
-
-        <div class="p-4 flex flex-col justify-between">
+        
+        <div class="p-4 flex flex-col justify-between w-1/2">
             <strong class="text-lg font-semibold text-center">Hotel Enterprice</strong>
             <span class="text-sm text-gray-600 mt-2">
                 Uno de los hoteles más lujosos de Cartagena ubicado al este, ofrece gran accesibilidad y vistas hermosas.
@@ -17,10 +17,12 @@
                 <img src="../img/Star.png" alt="estrellas" class="w-5">
                 <img src="../img/Star.png" alt="estrellas" class="w-5">
             </div>
-
-            <button class="mt-4 bg-blue-500 text-white px-4 py-2 rounded-xl hover:bg-blue-600 ">
-                Más detalles
-            </button>
+            <div class="flex justify-center">
+                <button class="mt-4 bg-blue-500 text-white w-36 rounded-xl hover:bg-blue-600">
+                    Más detalles
+                </button>
+            </div>
+            
         </div>
     </header>
 </article>
