--- a/src/pages/hoteles.astro
+++ b/src/pages/hoteles.astro
@@ -6,9 +6,46 @@ import Layout from '../layouts/Layout.astro';
 ---
 
 <Layout isHomePage={false} title="RutaFinder-Hoteles">
-   <Nav/>
-   <Carts/>
-  
-   <Footer/>
+   <Nav />
 
+   <div class="text-center">
+      <h1 class="text-3xl font-bold mb-4">Nuestras ciudades y hoteles</h1>
+      <span class="text-base text-gray-600">
+         La agencia selecciona cuidadosamente los hoteles para asegurar que los huéspedes 
+         experimenten lo mejor de la cultura, la comodidad y el servicio local, 
+         adaptado a diferentes gustos y presupuestos.
+      </span>
+   </div>
+
+   <br />
+
+   <h1 class="text-3xl font-bold mb-4 mt-8">Cartagena de Indias</h1>
+   
+   <div class="flex flex-wrap space-x-4">
+      <Carts />
+      <Carts />
+      <Carts />
+      <Carts />
+      <Carts />
+      <Carts />
+      <Carts />
+      <Carts />
+   </div>
+
+   <br />
+
+   <h1 class="text-3xl font-bold mb-4 mt-8">Cartagena de Indias</h1>
+
+   <div class="flex flex-wrap space-x-4">
+      <Carts />
+      <Carts />
+      <Carts />
+      <Carts />
+      <Carts />
+      <Carts />
+      <Carts />
+      <Carts />
+   </div>
+
+   <Footer />
 </Layout>
