--- a/src/components/Carts.astro
+++ b/src/components/Carts.astro
@@ -1,4 +1,4 @@
-<article class="flex bg-white rounded-2xl shadow-xl overflow-hidden max-w-md m-4">
+<article class="flex bg-white rounded-2xl shadow-lg overflow-hidden max-w-md m-4">
     <header class="flex w-full">
        
         <img src="../img/hotel enterprice.png" alt="Hotel Enterprice" class="w-1/2 object-cover rounded-2xl">
