Trabando en responsive hotel, y corrigiendo onpress

--- a/src/components/Carts.astro
+++ b/src/components/Carts.astro
@@ -1,13 +1,13 @@
 <article class="flex bg-white rounded-2xl shadow-lg overflow-hidden max-w-md m-4">
     <header class="flex w-full">
        
-        <img src="../img/hotel enterprice.png" alt="Hotel Enterprice" class="w-1/2 object-cover rounded-2xl">
+        <img src="../img/hotel lujoso.png" alt="Name Hotel" class="w-1/2 object-cover rounded-2xl">
 
         
         <div class="p-4 flex flex-col justify-between w-1/2">
-            <strong class="text-lg font-semibold text-center">Hotel Enterprice</strong>
+            <strong class="text-lg font-semibold text-center">Title</strong>
             <span class="text-sm text-gray-600 mt-2">
-                Uno de los hoteles más lujosos de Cartagena ubicado al este, ofrece gran accesibilidad y vistas hermosas.
+                Description
             </span>
             <div class="flex items-center mt-4">
                 <span class="text-sm font-semibold mr-2">Ranking:</span>
