--- a/src/pages/hoteles.astro
+++ b/src/pages/hoteles.astro
@@ -18,10 +18,10 @@ import Layout from '../layouts/Layout.astro';
    </div>
 
    <br />
-<div class="mx-48 flex flex-wrap justify-start">
-   <h1 class="text-3xl font-bold mb-4 mt-8">Cartagena de Indias</h1>
+<div class="flex flex-wrap justify-start align-center">
+   <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Cartagena de Indias</h1>
    
-   <div class="flex flex-wrap">
+   <div class="flex flex-wrap justify-center">
       <Carts />
       <Carts />
       <Carts />
@@ -31,13 +31,14 @@ import Layout from '../layouts/Layout.astro';
       <Carts />
       <Carts />
       <Carts />
+      
    </div>
 
    <br />
 
-   <h1 class="text-3xl font-bold mb-4 mt-8">Cartagena de Indias</h1>
-
-   <div class="flex flex-wrap">
+   <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Cartagena de Indias</h1>
+   
+   <div class="flex flex-wrap justify-center">
       <Carts />
       <Carts />
       <Carts />
@@ -47,8 +48,8 @@ import Layout from '../layouts/Layout.astro';
       <Carts />
       <Carts />
       <Carts />
+      
    </div>
-</div>
 
    <Footer />
 </Layout>
