--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -1,13 +1,9 @@
----
-const currentPage = Astro.url.pathname;
----
-
 <main class="container mx-auto">
     <div class="titulo text-center mb-6">
         <h1 class="text-3xl font-bold mt-4">Explora la Magia de Nuestro Paraíso Colombiano</h1>
     </div>
     <div class="flex justify-center space-x-4 mb-6">
-        <button class={`border border-blue-500 rounded-lg p-4 transition-all ${currentPage === '/hoteles' ? 'bg-blue-500 text-white' : 'bg-white text-blue-500'}`}>
+        <button class={`border border-blue-500 rounded-lg p-4 transition-all ${Astro.url.pathname === '/hoteles' ? 'bg-blue-500' : 'bg-white'}`}>
             <a href="/hoteles">
                 <span class="flex flex-col items-center">
                     <img src="../img/hotel.png" alt="hoteles" class="w-12 h-12 mb-2">
@@ -15,7 +11,7 @@ const currentPage = Astro.url.pathname;
                 </span>
             </a>
         </button>
-        <button class={`border border-blue-500 rounded-lg p-4 transition-all ${currentPage === '/actividades' ? 'bg-blue-500 text-white' : 'bg-white text-blue-500'}`}>
+        <button class={`border border-blue-500 rounded-lg p-4 transition-all ${Astro.url.pathname === '/actividades' ? 'bg-blue-500' : 'bg-white'}`}>
             <a href="/actividades">
                 <span class="flex flex-col items-center">
                     <img src="../img/actividades.png" alt="actividades" class="w-12 h-12 mb-2">
@@ -23,7 +19,7 @@ const currentPage = Astro.url.pathname;
                 </span>
             </a>
         </button>
-        <button class={`border border-blue-500 rounded-lg p-4 transition-all ${currentPage === '/restaurantes' ? 'bg-blue-500 text-white' : 'bg-white text-blue-500'}`}>
+        <button class={`border border-blue-500 rounded-lg p-4 transition-all ${Astro.url.pathname === '/restaurantes' ? 'bg-blue-500' : 'bg-white'}`}>
             <a href="/restaurantes">
                 <span class="flex flex-col items-center">
                     <img src="../img/restaurante.png" alt="restaurantes" class="w-12 h-12 mb-2">
@@ -31,7 +27,7 @@ const currentPage = Astro.url.pathname;
                 </span>
             </a>
         </button>
-        <button class={`border border-blue-500 rounded-lg p-4 transition-all ${currentPage === '/paquetes' ? 'bg-blue-500 text-white' : 'bg-white text-blue-500'}`}>
+        <button class={`border border-blue-500 rounded-lg p-4 transition-all ${Astro.url.pathname === '/paquetes' ? 'bg-blue-500' : 'bg-white'}`}>
             <a href="/paquetes">
                 <span class="flex flex-col items-center">
                     <img src="../img/paquetes.png" alt="paquetes" class="w-12 h-12 mb-2">
@@ -41,7 +37,6 @@ const currentPage = Astro.url.pathname;
         </button>
     </div>
 </main>
-
 
     <!-- Barra de búsqueda -->
     <div class="group relative w-full max-w-lg mx-auto mb-6">
