--- a/src/pages/hoteles.astro
+++ b/src/pages/hoteles.astro
@@ -1,15 +1,15 @@
 ---
 import Nav from '../components/Nav.astro';
 import Footer from '../components/Footer.astro';
-import Carts from '../components/Carts.astro';
 import Layout from '../layouts/Layout.astro';
+import CartHoteles from '../components/CartHoteles.astro';
 ---
 
 <Layout isHomePage={false} title="RutaFinder-Hoteles">
    <Nav/>
 
    <div class="text-center">
-      <h1 class="text-3xl font-bold mb-4">Nuestras ciudades y hoteles</h1>
+      <h1 class="text-3xl font-bold mb-7">Nuestras ciudades y hoteles</h1>
       <span class="text-base text-gray-600">
          La agencia selecciona cuidadosamente los hoteles para asegurar que los huéspedes 
          experimenten lo mejor de la cultura, la comodidad y el servicio local, 
@@ -22,15 +22,16 @@ import Layout from '../layouts/Layout.astro';
    <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Cartagena de Indias</h1>
    
    <div class="flex flex-wrap justify-center">
-      <Carts />
-      <Carts />
-      <Carts />
-      <Carts />
-      <Carts />
-      <Carts />
-      <Carts />
-      <Carts />
-      <Carts />
+      <CartHoteles />
+      <CartHoteles />
+      <CartHoteles />
+      <CartHoteles />
+      <CartHoteles />
+      <CartHoteles />
+      <CartHoteles />
+      <CartHoteles />
+      <CartHoteles />
+      
       
    </div>
 
@@ -39,15 +40,16 @@ import Layout from '../layouts/Layout.astro';
    <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Cartagena de Indias</h1>
    
    <div class="flex flex-wrap justify-center">
-      <Carts />
-      <Carts />
-      <Carts />
-      <Carts />
-      <Carts />
-      <Carts />
-      <Carts />
-      <Carts />
-      <Carts />
+      <CartHoteles />
+      <CartHoteles />
+      <CartHoteles />
+      <CartHoteles />
+      <CartHoteles />
+      <CartHoteles />
+      <CartHoteles />
+      <CartHoteles />
+      <CartHoteles />
+      
       
    </div>
 
