--- a/src/pages/restaurantes.astro
+++ b/src/pages/restaurantes.astro
@@ -2,11 +2,57 @@
 import Nav from '../components/Nav.astro';
 import Footer from '../components/Footer.astro';
 import Layout from '../layouts/Layout.astro';
+import CartRestaurantes from '../components/CartRestaurantes.astro';
 ---
 
 <Layout isHomePage={false} title="RutaFinder-Restaurantes">
     <Nav/>
-    <h1>restaurantes</h1>
+    
+   <div class="text-center">
+    <h1 class="text-3xl font-bold mb-7">Nuestros restaurantes y comidas típicas</h1>
+    <span class="text-base text-gray-600">
+       La agencia selecciona cuidadosamente los hoteles para asegurar que los huéspedes 
+       experimenten lo mejor de la cultura, la comodidad y el servicio local, 
+       adaptado a diferentes gustos y presupuestos.
+    </span>
+ </div>
+
+ <br />
+<div class="flex flex-wrap justify-start align-center">
+ <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Don Jorge</h1>
+ 
+ <div class="flex flex-wrap justify-center">
+    <CartRestaurantes />
+    <CartRestaurantes />
+    <CartRestaurantes />
+    <CartRestaurantes />
+    <CartRestaurantes />
+    <CartRestaurantes />
+    <CartRestaurantes />
+    <CartRestaurantes />
+    <CartRestaurantes />
+    
+    
+    
+ </div>
+
+ <br />
+
+ <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Don Jorge</h1>
+ 
+ <div class="flex flex-wrap justify-center">
+    <CartRestaurantes />
+    <CartRestaurantes />
+    <CartRestaurantes />
+    <CartRestaurantes />
+    <CartRestaurantes />
+    <CartRestaurantes />
+    <CartRestaurantes />
+    <CartRestaurantes />
+    <CartRestaurantes />
+    
+    
+ </div>
 
  
  
