Añadiendo logo RuatFinder SVG alta calidad

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -4,7 +4,7 @@
     <nav class="flex justify-center items-center h-[8vh]">
         <div>
             <a href="index.html">
-                <img class="w-[259px]"src="../img/logo-actualizado.png" alt="Logo">
+                <img class="w-[259px]"src="../img/LogoRutaFinder.svg" alt="Logo">
             </a>
         </div>
     </nav>
