--- a/src/components/Nav.astro
+++ b/src/components/Nav.astro
@@ -66,7 +66,7 @@
 
 
     <!-- Barra de búsqueda -->
-    <div class="group relative w-full max-w-lg mx-auto mb-6">
+    <div class="group relative w-full sm:max-w-xl md:max-w-2xl lg:max-w-3xl mx-auto mb-6">
         <a href="resultados.html" class="absolute top-3 left-3">
             <svg class="icon w-6 h-6 text-gray-500" aria-hidden="true" viewBox="0 0 24 24">
                 <g>
@@ -76,4 +76,3 @@
         </a>
         <input placeholder="Dónde ir, qué hacer, hoteles" type="search" class="input pl-10 w-full py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
     </div>
-</main>
