--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -35,17 +35,19 @@ import Layout from '../layouts/Layout.astro';
         </button>
     </div>
 
+   
     <!-- Barra de búsqueda -->
-    <div class="group relative w-full max-w-lg mx-auto mb-6">
-        <a href="resultados.html" class="absolute top-3 left-3">
-            <svg class="icon w-6 h-6 text-gray-500" aria-hidden="true" viewBox="0 0 24 24">
-                <g>
-                    <path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path>
-                </g>
-            </svg>
-        </a>
-        <input placeholder="Dónde ir, qué hacer, hoteles" type="search" class="input pl-10 w-full py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
-    </div>
+<div class="group relative w-full sm:max-w-xl md:max-w-2xl lg:max-w-3xl mx-auto mb-6">
+    <a href="resultados.html" class="absolute top-3 left-3">
+        <svg class="icon w-6 h-6 text-gray-500" aria-hidden="true" viewBox="0 0 24 24">
+            <g>
+                <path d="M21.53 20.47l-3.66-3.66C19.195 15.24 20 13.214 20 11c0-4.97-4.03-9-9-9s-9 4.03-9 9 4.03 9 9 9c2.215 0 4.24-.804 5.808-2.13l3.66 3.66c.147.146.34.22.53.22s.385-.073.53-.22c.295-.293.295-.767.002-1.06zM3.5 11c0-4.135 3.365-7.5 7.5-7.5s7.5 3.365 7.5 7.5-3.365 7.5-7.5 7.5-7.5-3.365-7.5-7.5z"></path>
+            </g>
+        </svg>
+    </a>
+    <input placeholder="Dónde ir, qué hacer, hoteles" type="search" class="input pl-10 w-full py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
+</div>
+
 
     <!-- Slider -->
     <div class="relative max-w-4xl mx-auto overflow-hidden rounded-lg">
