--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,6 +1,7 @@
 ---
 import FooterOther from '../components/FooterOther.astro';
 import Layout from '../layouts/Layout.astro';
+import Slider from '../components/Slider.astro';
 ---
 
 <Layout isHomePage={true} title="Página Principal">
@@ -35,7 +36,6 @@ import Layout from '../layouts/Layout.astro';
         </button>
     </div>
 
-   
     <!-- Barra de búsqueda -->
 <div class="group relative w-full sm:max-w-xl md:max-w-2xl lg:max-w-3xl mx-auto mb-6">
     <a href="resultados.html" class="absolute top-3 left-3">
@@ -47,32 +47,7 @@ import Layout from '../layouts/Layout.astro';
     </a>
     <input placeholder="Dónde ir, qué hacer, hoteles" type="search" class="input pl-10 w-full py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
 </div>
-
-
-    <!-- Slider -->
-    <div class="relative max-w-4xl mx-auto overflow-hidden rounded-lg">
-        <div class="slider flex">
-            <div class="slide w-full flex-shrink-0 relative">
-                <img src="../img/Playas.jpg" alt="playas" class="w-full h-full object-cover rounded-lg">
-                <div class="slide-content absolute bottom-0 left-0 bg-black bg-opacity-50 p-4 rounded-lg text-white">
-                    <h2 class="text-xl font-semibold">Estas son las mejores playas de Colombia</h2>
-                    <button class="btn-ver-mas mt-4 bg-blue-500 text-white py-2 px-4 rounded hover:bg-blue-600 transition">Ver más</button>
-                </div>
-            </div>
-            <!-- Repite para las demás diapositivas -->
-        </div>
-
-        <!-- Botones de navegación -->
-        <button class="prev absolute top-1/2 left-0 transform -translate-y-1/2 bg-white p-3 rounded-full shadow-md hover:bg-gray-200 transition">&#10094;</button>
-        <button class="next absolute top-1/2 right-0 transform -translate-y-1/2 bg-white p-3 rounded-full shadow-md hover:bg-gray-200 transition">&#10095;</button>
-    </div>
-
-    <!-- Paginación -->
-    <div class="pagination flex justify-center space-x-2 mt-4">
-        <span class="dot h-3 w-3 bg-gray-300 rounded-full cursor-pointer"></span>
-        <span class="dot h-3 w-3 bg-gray-300 rounded-full cursor-pointer"></span>
-        <span class="dot h-3 w-3 bg-gray-300 rounded-full cursor-pointer"></span>
-    </div>
+<Slider/>
 </main>
 </Layout>
 <FooterOther/>
