Margenes: poniendo margenes a todas las categorias Detalles: Añadiendo pagina de detalles con todos sus elementos

--- a/src/components/CartHoteles.astro
+++ b/src/components/CartHoteles.astro
@@ -18,9 +18,11 @@
                 <img src="../img/Star.png" alt="estrellas" class="w-5">
             </div>
             <div class="flex justify-center">
-                <button class="mt-4 bg-blue-500 text-white w-36 rounded-xl hover:bg-blue-600">
-                    Más detalles
-                </button>
+                <a href="detalles.html">
+                    <button class="mt-4 bg-blue-500 text-white w-36 rounded-xl hover:bg-blue-600">
+                        Más detalles
+                    </button>
+                </a>
             </div>
             
         </div>
