--- a/src/pages/hoteles.astro
+++ b/src/pages/hoteles.astro
@@ -18,40 +18,36 @@ import CartHoteles from '../components/CartHoteles.astro';
    </div>
 
    <br />
-<div class="flex flex-wrap justify-start align-center">
-   <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Cartagena de Indias</h1>
+
    
-   <div class="flex flex-wrap justify-center">
-      <CartHoteles />
-      <CartHoteles />
-      <CartHoteles />
-      <CartHoteles />
-      <CartHoteles />
-      <CartHoteles />
-      <CartHoteles />
-      <CartHoteles />
-      <CartHoteles />
-      
-      
-   </div>
+   <div class="container mx-auto">
+      <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Cartagena de Indias</h1>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+        <CartHoteles />
+        <CartHoteles />
+        <CartHoteles />
+        <CartHoteles />
+        <CartHoteles />
+        <CartHoteles />
+      </div>
+    </div>
+    
+    
 
    <br />
 
-   <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Cartagena de Indias</h1>
-   
-   <div class="flex flex-wrap justify-center">
-      <CartHoteles />
-      <CartHoteles />
-      <CartHoteles />
-      <CartHoteles />
-      <CartHoteles />
-      <CartHoteles />
-      <CartHoteles />
-      <CartHoteles />
-      <CartHoteles />
-      
-      
-   </div>
+   <div class="container mx-auto">
+      <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Cartagena de Indias</h1>
+      <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+        <CartHoteles />
+        <CartHoteles />
+        <CartHoteles />
+        <CartHoteles />
+        <CartHoteles />
+        <CartHoteles />
+      </div>
+    </div>
+    
 
    <Footer/>
 </Layout>
