--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,7 +1,7 @@
 ---
 import FooterOther from '../components/FooterOther.astro';
 import Layout from '../layouts/Layout.astro';
-import Slider from '../components/Slider.astro';
+import SliderIndex from '../components/SliderIndex.astro';
 ---
 
 <Layout isHomePage={true} title="Página Principal">
@@ -47,7 +47,7 @@ import Slider from '../components/Slider.astro';
     </a>
     <input placeholder="Dónde ir, qué hacer, hoteles" type="search" class="input pl-10 w-full py-3 border rounded-lg focus:outline-none focus:ring-2 focus:ring-blue-500">
 </div>
-<Slider/>
+<SliderIndex/>
 </main>
 </Layout>
 <FooterOther/>
