--- a/src/pages/paquetes.astro
+++ b/src/pages/paquetes.astro
@@ -17,39 +17,38 @@ import CartPaquetes from '../components/CartPaquetes.astro';
  </div>
 
  <br />
-<div class="flex flex-wrap justify-start align-center">
- <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Cartagena de Indias</h1>
- 
- <div class="flex flex-wrap justify-center">
-    <CartPaquetes />
-    <CartPaquetes />
-    <CartPaquetes />
-    <CartPaquetes />
-    <CartPaquetes />
-    <CartPaquetes />
-    <CartPaquetes />
-    <CartPaquetes />
-    <CartPaquetes />
-    
-    
+ <div class="container mx-auto">
+   <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Paquete Lo mejor de Colombia</h1>
+   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+     <CartPaquetes />
+     <CartPaquetes />
+     <CartPaquetes />
+     <CartPaquetes />
+     <CartPaquetes />
+     <CartPaquetes />
+     <CartPaquetes />
+     <CartPaquetes />
+     <CartPaquetes />
+     
+   </div>
  </div>
-
+ 
  <br />
 
- <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Cartagena de Indias</h1>
- 
- <div class="flex flex-wrap justify-center">
-    <CartPaquetes />
-    <CartPaquetes />
-    <CartPaquetes />
-    <CartPaquetes />
-    <CartPaquetes />
-    <CartPaquetes />
-    <CartPaquetes />
-    <CartPaquetes />
-    <CartPaquetes />
-    
-    
+ <div class="container mx-auto">
+   <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Cartagena de Indias</h1>
+   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+     <CartPaquetes />
+     <CartPaquetes />
+     <CartPaquetes />
+     <CartPaquetes />
+     <CartPaquetes />
+     <CartPaquetes />
+     <CartPaquetes />
+     <CartPaquetes />
+     <CartPaquetes />
+     
+   </div>
  </div>
     <Footer/>
 </Layout>
