--- a/src/pages/restaurantes.astro
+++ b/src/pages/restaurantes.astro
@@ -18,42 +18,41 @@ import CartRestaurantes from '../components/CartRestaurantes.astro';
  </div>
 
  <br />
-<div class="flex flex-wrap justify-start align-center">
- <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Don Jorge</h1>
- 
- <div class="flex flex-wrap justify-center">
-    <CartRestaurantes />
-    <CartRestaurantes />
-    <CartRestaurantes />
-    <CartRestaurantes />
-    <CartRestaurantes />
-    <CartRestaurantes />
-    <CartRestaurantes />
-    <CartRestaurantes />
-    <CartRestaurantes />
-    
-    
-    
+ <div class="container mx-auto">
+   <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Restaurante Los Olivos</h1>
+   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+     <CartRestaurantes />
+     <CartRestaurantes />
+     <CartRestaurantes />
+     <CartRestaurantes />
+     <CartRestaurantes />
+     <CartRestaurantes />
+     <CartRestaurantes />
+     <CartRestaurantes />
+     <CartRestaurantes />
+     
+     
+   </div>
  </div>
-
+ 
  <br />
 
- <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Don Jorge</h1>
- 
- <div class="flex flex-wrap justify-center">
-    <CartRestaurantes />
-    <CartRestaurantes />
-    <CartRestaurantes />
-    <CartRestaurantes />
-    <CartRestaurantes />
-    <CartRestaurantes />
-    <CartRestaurantes />
-    <CartRestaurantes />
-    <CartRestaurantes />
-    
-    
+ <div class="container mx-auto">
+   <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Restaurante Los Olivos</h1>
+   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+     <CartRestaurantes />
+     <CartRestaurantes />
+     <CartRestaurantes />
+     <CartRestaurantes />
+     <CartRestaurantes />
+     <CartRestaurantes />
+     <CartRestaurantes />
+     <CartRestaurantes />
+     <CartRestaurantes />
+     
+     
+   </div>
  </div>
-
  
  
     <Footer/>
