--- a/src/pages/actividades.astro
+++ b/src/pages/actividades.astro
@@ -18,41 +18,42 @@ import CartActividades from '../components/CartActividades.astro';
  </div>
 
  <br />
-<div class="flex flex-wrap justify-start align-center">
- <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Cartagena de Indias</h1>
- 
- <div class="flex flex-wrap justify-center">
-    <CartActividades />
-    <CartActividades />
-    <CartActividades />
-    <CartActividades />
-    <CartActividades />
-    <CartActividades />
-    <CartActividades />
-    <CartActividades />
-    <CartActividades />
-    
-    
+ <div class="container mx-auto">
+   <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Alcalá bello y divertido</h1>
+   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+     <CartActividades />
+     <CartActividades />
+     <CartActividades />
+     <CartActividades />
+     <CartActividades />
+     <CartActividades />
+     <CartActividades />
+     <CartActividades />
+     <CartActividades />
+     
+     
+   </div>
  </div>
-
+ 
  <br />
 
- <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Cartagena de Indias</h1>
- 
- <div class="flex flex-wrap justify-center">
-    <CartActividades />
-    <CartActividades />
-    <CartActividades />
-    <CartActividades />
-    <CartActividades />
-    <CartActividades />
-    <CartActividades />
-    <CartActividades />
-    <CartActividades />
-    
+ <div class="container mx-auto">
+   <h1 class="text-3xl font-bold mb-4 mt-8 ml-4">Alcalá bello y divertido</h1>
+   <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3">
+     <CartActividades />
+     <CartActividades />
+     <CartActividades />
+     <CartActividades />
+     <CartActividades />
+     <CartActividades />
+     <CartActividades />
+     <CartActividades />
+     <CartActividades />
+     
+     
+   </div>
  </div>
-
-    
+ 
 
     <Footer/>
 </Layout>
