--- a/src/components/CartHoteles.astro
+++ b/src/components/CartHoteles.astro
@@ -18,7 +18,7 @@
                 <img src="../img/Star.png" alt="estrellas" class="w-5">
             </div>
             <div class="flex justify-center">
-                <a href="detalles.html">
+                <a href="/detalles">
                     <button class="mt-4 bg-blue-500 text-white w-36 rounded-xl hover:bg-blue-600">
                         Más detalles
                     </button>
